# ApproveKit

./: .gitignore  CHANGELOG.md  CNAME  LICENSE  README.md  docs.html  index.html  policy.yaml  pyproject.toml  release.py
.github/workflows/: pages.yml  publish-pypi.yml  tests.yml
approvekit/: __init__.py  core.py  exceptions.py  models.py  policy.py  reviewer.py  storage.py  web.py
approvekit_brand_package/: preview.html
approvekit_brand_package/assets/favicon/: site.webmanifest
approvekit_brand_package/css/: approvekit.css
approvekit_brand_package/guidelines/: website-css.md
assets/: style.css
demo/: agent.py  tools.py
docs/: MVP_IMPLEMENTATION_PLAN.md
tests/: conftest.py  test_approve.py  test_policy.py  test_reject.py  test_storage.py  test_timeout.py  test_web.py
