[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "approvekit"
version = "0.1.0"
description = "Human-in-the-loop approval middleware for risky AI agent actions"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
]

[project.scripts]
approvekit-review = "approvekit.reviewer:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["approvekit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
