[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "approvekit"
version = "0.1.0"
description = "Human-in-the-loop approval middleware for risky AI agent actions"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    {name = "Ajay Kumar Ganesh", email = "thegeekajay@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
]

[project.scripts]
approvekit-review = "approvekit.reviewer:main"
approvekit-web = "approvekit.web:main"

[project.urls]
Homepage = "http://approvekit.theajaykumar.com"
Documentation = "http://approvekit.theajaykumar.com/docs.html"
Repository = "https://github.com/thegeekajay/ApproveKit"
Issues = "https://github.com/thegeekajay/ApproveKit/issues"
Changelog = "https://github.com/thegeekajay/ApproveKit/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["approvekit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
